Did the method javadocs

--- a/jdm.properties
+++ b/jdm.properties
@@ -1,14 +1,14 @@
 #jDiskMark Properties File
-#Thu Sep 24 18:24:19 EDT 2020
-numOfFiles=50
+#Wed Sep 30 01:58:54 EDT 2020
+numOfFiles=250
 blockSequence=SEQUENTIAL
 readTest=true
-blockSizeKb=128
+blockSizeKb=64
 autoRemoveData=false
 autoReset=true
 showMaxMin=true
-locationDir=C\:\\Users\\mcohen
+locationDir=C\:\\Users\\cmste
 numOfBlocks=256
 writeSyncEnable=true
-writeTest=true
+writeTest=false
 multiFile=true
